# handovergap

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  LICENSE  LOOP_ENGINEERING.md  README.ja.md  README.md  SECURITY.md  design-qa.md  pyproject.toml
article/: independent_gap_label_review.json  independent_gap_label_review.md  key_phrases.md  openai_slot_filling_results.json  openai_slot_filling_results_gpt5mini.json  openai_slot_filling_results_gpt5mini_strict.json  results.md  tidb_audit_query_results.json  tidb_audit_query_results.md  tidb_workload_audit_100k_results.json  tidb_workload_audit_100k_results.md  tidb_workload_audit_10k_results.json  tidb_workload_audit_10k_results.md  tidb_workload_audit_results.json  tidb_workload_audit_results.md  zenn_draft.md  zenn_draft_skeleton.md  zenn_outline.md
docs/: 01_product_and_research_brief.md  02_method_handovergap_rag.md  03_tidb_architecture.md  04_tidb_schema.sql  05_slot_schema.md  06_handover_gap_bench.md  07_evaluation_metrics.md  08_pypi_package_design.md  09_cli_and_api_spec.md  10_demo_design.md  11_implementation_plan.md  12_zenn_article_outline.md  13_competitor_analysis.md  14_risks_and_notes.md  15_loop_engineering.md  16_agent_operating_contract.md  17_winning_strategy.md  18_judging_scorecard.md  19_competitor_battlecard.md  20_research_positioning.md  21_method_deep_dive.md  22_article_storyboard.md  23_demo_script.md  24_pypi_release_playbook.md  25_failure_modes.md  26_final_submission_checklist.md  27_evaluation_audit.md  28_handovergap_product_roadmap.md  29_production_adoption.md  (+4 more)
(+136 files in other folders)
