[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handovergap"
version = "0.1.16"
description = "Tacit Context Gap Detection for Handover-oriented RAG"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Masa Mura" }
]
urls = { Repository = "https://github.com/masanori0209/handovergap", Issues = "https://github.com/masanori0209/handovergap/issues" }
keywords = ["rag", "handover", "agent-memory", "tidb", "evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "rich>=13",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["build>=1", "pytest>=8", "ruff>=0.5", "twine>=5"]
demo = ["streamlit>=1.30"]
tidb = ["sqlalchemy>=2", "pymysql>=1", "python-dotenv>=1"]
openai = ["openai>=1"]
live = ["streamlit>=1.30", "openai>=1", "sqlalchemy>=2", "pymysql>=1", "python-dotenv>=1"]

[project.scripts]
handovergap = "handovergap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/handovergap"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
